--- a/app/views/authors/show.html.erb
+++ b/app/views/authors/show.html.erb
@@ -1,2 +1,3 @@
 <h2><%= @author.name %></h2>
-<a href="mailto:<%= @author.email %>"><%= @author.email %></a>
+<%= link_to "edit", edit_author_path(@author) %>
+<p><a href="mailto:<%= @author.email %>"><%= @author.email %></a></p>
