--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,36 +1,31 @@
-<h2>Editing "<%= @post.title %>"</h2>
+<h2>Create a Post</h2>
 
-<%= form_tag post_path(@post), method: "patch" do %>
+<%= form_tag posts_path, method: "post" do %>
   <% if @post.errors.any? %>
     <div id="error_explanation">
       <h3>There were some errors:</h3>
       <ul>
         <% @post.errors.full_messages.each do |message| %>
           <li><%= message %></li>
-        <% end %>
+        <% end%>
       </ul>
     </div>
-  <% end%>
+  <% end %>
   <br>
   <div class="field <%= 'field_with_errors' if @post.errors[:title].any? %>">
     <%= label_tag "title", "Title" %>
     <%= text_field_tag "title", @post.title %>
   </div>
-
+  <br>
   <div class="field <%= 'field_with_errors' if @post.errors[:category].any? %>">
     <%= label_tag "category", "Category" %>
-    <p>Must be either "Fiction" or "Non-Fiction".</p>
     <%= text_field_tag "category", @post.category %>
-    <p>
-      Please type carefully as our top scientists are working around the clock to
-      enable state-of-the-art dropdown technology for this form field.
-    </p>
   </div>
-
+  <br>
   <div class="field <%= 'field_with_errors' if @post.errors[:content].any? %>">
     <%= label_tag "content", "Content" %>
-    <br />
     <%= text_area_tag "content", @post.content %>
   </div>
-  <%= submit_tag "Update" %>
+  <br>
+  <%= submit_tag "Create" %>
 <% end %>
